Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* It's suggested that folks use bash 4.1, primarily for regen
  speed reasons- it is not required however.

* bash spawning now enforce --norc and --noprofile in full.

* RESTRICT is now properly use evaluated.

* pkgcore.restrictions.values.ContainmentMatch is deprecated in favor of
  ContainmentMatch2.  Update your code- by pkgcore 0.7, ContainmentMatch
  will become ContainmentMatch2, and a shim will be left in place.

* introduction of EAPI objects (pkgcore.ebuild.eapi) for controlling/defining
  new eapi's, capabilities, etc.

* pmaint regen is now cumulatively ~23x faster then the previous release.
  This is via restoration of original metadata regeneration speeds, and
  via enabling an eclass preloading optimization.  No impact on metadata-
  just far faster regeneration.

* Roughly a 15x speedup in general metadata regeneration; basically rework
  a fix that was added to to 0.5.11 (dealing with portage induced
  breakage in env loadup from their declare usage).

* filter-env regex backend now uses python's re always; previously
  if the extension was active it would use posix regex.

  This resolves occasional odd failures when running native filter-env.

* fix a truncation error in suffix version parsing resulting in
  _p2010081516093 being less than _p2009072801401 .

* pkgcore.ebuild.restricts now contains some generally useful
  building block restrictions for any api consumers

* full rewrite of EAPI helpers adding better error info, saner code,
  double checked against PMS and portage/paludis to ensure no oddities.

* fix to buildpkg/pristine-binpkg saving.  If you're looking for
  something to contribute to pkgcore wise, tests for this would be
  appreciated.

* write support for DEFINED_PHASES.

* bashrc hooks now run from ${S} or ${WORKDIR}, depending on
  PMS rules for that phase.
