@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* Fix python2.7 incompatiblity in pkgcore.ebuild.misc
+
 * It's suggested that folks use bash 4.1, primarily for regen
   speed reasons- it is not required however.
 
